ferdig med prosjektet, litt usikker på om jeg har brukt time-klassen riktig